--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<html lang="pt-BR"><head>
+<html lang="pt-BR">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eletricidade nas Escolas - Home</title>
+    <title>Desigualdade Social - Home</title>
     <link rel="stylesheet" href="style.css">
-<style type="text/css" id="operaUserStyle"></style></head>
+    <style type="text/css" id="operaUser Style"></style>
+</head>
 <body>
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <h1>Eletricidade nas Escolas</h1>
-            <p>Conscientizando e Educando sobre Segurança e Eficiência Energética</p>
+            <h1>Desigualdade Social</h1>
+            <p>Conscientizando e Educando sobre a Importância da Igualdade e Inclusão</p>
         </div>
         <nav>
             <ul>
@@ -24,31 +26,34 @@
     <!-- Conteúdo Principal -->
     <main>
         <section class="hero">
-            <h2>Explorando a Importância da Eletricidade nas Escolas</h2>
-            <p>A eletricidade é uma parte essencial da vida moderna, presente em cada aspecto de nossa rotina. No ambiente escolar, ela promove um aprendizado mais eficiente e seguro.</p>
+            <h2>Explorando a Desigualdade Social</h2>
+            <p>A desigualdade social refere-se à disparidade no acesso a recursos, oportunidades e direitos entre diferentes grupos em uma sociedade. É um fenômeno que afeta a qualidade de vida e o desenvolvimento social.</p>
             <a href="informacoes.html" class="btn">Saiba Mais</a>
         </section>
 
         <section class="features">
             <div class="feature">
-                <h3>Segurança Elétrica</h3>
-                <p>Informações sobre práticas seguras para o uso da eletricidade, prevenindo acidentes e melhorando o ambiente escolar.</p>
+                <h3>Definição de Desigualdade Social</h3>
+                <p>A desigualdade social é a diferença de condições de vida e oportunidades entre indivíduos ou grupos, manifestando-se em diversas áreas, como renda, educação, saúde e direitos políticos.</p>
             </div>
             <div class="feature">
-                <h3>Eficiência Energética</h3>
-                <p>Conselhos e dicas para usar energia de maneira eficiente, reduzindo o consumo e cuidando do meio ambiente.</p>
+                <h3>Causas da Desigualdade Social</h3>
+                <p>As causas incluem fatores históricos, como colonialismo e discriminação; estruturas sociais que favorecem certos grupos; políticas públicas inadequadas; e os efeitos da globalização.</p>
             </div>
             <div class="feature">
-                <h3>Impacto na Educação</h3>
-                <p>Como o uso seguro da eletricidade e uma infraestrutura energética adequada podem melhorar a qualidade do ensino.</p>
+                <h3>Consequências da Desigualdade Social</h3>
+                <p>A desigualdade social gera pobreza, problemas de saúde, violência, exclusão social e limitações no acesso à educação e ao emprego, afetando o desenvolvimento de comunidades inteiras.</p>
+            </div>
+            <div class="feature">
+                <h3>Importância da Conscientização</h3>
+                <p>Conscientizar sobre a desigualdade social é crucial para promover políticas públicas eficazes, fomentar a inclusão e garantir que todos tenham acesso a oportunidades iguais, contribuindo para uma sociedade mais justa.</p>
             </div>
         </section>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>© 2024 Eletricidade nas Escolas | Todos os direitos reservados.</p>
+        <p>© 2024 Desigualdade Social | Todos os direitos reservados.</p>
     </footer>
-
-
-</body></html>
+</body>
+</html>
