--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="./Pages/sobre.html">Sobre</a></li>
                 <li><a href="./Pages/informacoes.html">Informações</a></li>
-                <li><a href="./Pages/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +27,7 @@
         <section class="hero">
             <h2>Explorando a Desigualdade Social</h2>
             <p>A desigualdade social refere-se à disparidade no acesso a recursos, oportunidades e direitos entre diferentes grupos em uma sociedade. É um fenômeno que afeta a qualidade de vida e o desenvolvimento social.</p>
-            <a href="informacoes.html" class="btn">Saiba Mais</a>
+            <a href="Saiba.html" class="btn">Saiba Mais</a>
         </section>
 
         <section class="features">
