--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="./Pages/sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="./Pages/informacoes.html">Informações</a></li>
             </ul>
         </nav>
