--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="./Pages/informacoes.html">Informações</a></li>
+                <li><a href="sobre.html" class="active">Sobre</a></li>
+                <li><a href="./Pages/informacoes.html" class="active">Informações</a></li>
             </ul>
         </nav>
     </header>
