--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="sobre.html" class="active">Sobre</a></li>
-                <li><a href="./Pages/informacoes.html" class="active">Informações</a></li>
+                <li><a href="informacoes.html" class="active">Informações</a></li>
             </ul>
         </nav>
     </header>
