--- a/informacoes.html
+++ b/informacoes.html
@@ -3,53 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre a Desigualdade Social</title>
+    <title>História do Desenvolvimento do Site sobre Desigualdade Social</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Sobre a Desigualdade Social</h1>
+        <h1>História do Desenvolvimento do Site sobre Desigualdade Social</h1>
     </header>
 
     <main>
         <section>
-            <h2>Definição de Desigualdade Social</h2>
-            <p>A desigualdade social refere-se à disparidade no acesso a recursos, oportunidades e direitos entre diferentes grupos sociais. Essa desigualdade pode se manifestar em várias dimensões, como econômica, educacional, de saúde e política.</p>
+            <h2>1. Identificação da Necessidade</h2>
+            <p>O projeto começou com a identificação da necessidade de conscientização sobre a desigualdade social. Observou-se que muitas pessoas não compreendiam a profundidade e as causas desse problema, o que motivou a criação de um site informativo.</p>
         </section>
 
         <section>
-            <h2>Causas da Desigualdade Social</h2>
-            <ul>
-                <li><strong>Fatores Históricos:</strong> A história de um país, incluindo colonialismo, escravidão e discriminação, pode criar desigualdades que persistem ao longo do tempo.</li>
-                <li><strong>Estruturas Sociais:</strong> Sistemas sociais que favorecem determinados grupos, como a discriminação racial e de gênero, contribuem para a desigualdade.</li>
-                <li><strong>Políticas Públicas Inadequadas:</strong> A falta de políticas que promovam a inclusão e a igualdade de oportunidades pode acentuar as desigualdades existentes.</li>
-                <li><strong>Globalização:</strong> O processo de globalização pode exacerbar desigualdades, beneficiando alguns países e grupos em detrimento de outros.</li>
-            </ul>
+            <h2>2. Pesquisa e Coleta de Dados</h2>
+            <p>Uma pesquisa abrangente foi realizada para coletar dados sobre desigualdade social. Isso incluiu a análise de estatísticas, estudos de caso e relatos de especialistas na área. O objetivo era reunir informações precisas e relevantes que pudessem ser apresentadas no site.</p>
         </section>
 
         <section>
-            <h2>Consequências da Desigualdade Social</h2>
-            <ul>
-                <li><strong>Pobreza:</strong> A desigualdade social é um dos principais fatores que perpetuam a pobreza, dificultando a mobilidade social.</li>
-                <li><strong>Problemas de Saúde:</strong> Grupos marginalizados frequentemente enfrentam acesso desigual a serviços de saúde, resultando em disparidades na saúde e expectativa de vida.</li>
-                <li><strong>Violência e Conflitos:</strong> A desigualdade pode levar a tensões sociais e conflitos, afetando a estabilidade e a coesão social.</li>
-                <li><strong>Desemprego:</strong> A falta de oportunidades de emprego para grupos marginalizados perpetua ciclos de exclusão e pobreza.</li>
-            </ul>
+            <h2>3. Planejamento do Conteúdo</h2>
+            <p>Com os dados em mãos, foi elaborado um planejamento do conteúdo do site. Decidiu-se dividir as informações em seções claras, como definição, causas, consequências e medidas de combate à desigualdade social. Essa estrutura ajudaria os visitantes a navegar facilmente pelas informações.</p>
         </section>
 
         <section>
-            <h2>Importância da Conscientização</h2>
-            <p>Conscientizar a sociedade sobre a desigualdade social é fundamental para promover mudanças. A educação e a informação podem ajudar a combater preconceitos e a promover a inclusão. Medidas efetivas para reduzir a desigualdade são essenciais para construir uma sociedade mais justa e equitativa.</p>
+            <h2>4. Design do Site</h2>
+            <p>O design do site foi desenvolvido com foco na acessibilidade e na usabilidade. Optou-se por um layout limpo e intuitivo, com cores que transmitissem a seriedade do tema. Também foram escolhidas fontes legíveis e imagens que ilustrassem a desigualdade social de forma impactante.</p>
         </section>
 
         <section>
-            <h2>Medidas para Combater a Desigualdade Social</h2>
-            <ul>
-                <li><strong>Educação Inclusiva:</strong> Garantir acesso igualitário à educação de qualidade para todos, independentemente de sua origem social.</li>
-                <li><strong>Reforma Fiscal:</strong> Implementar sistemas fiscais que promovam a redistribuição de renda e recursos.</li>
-                <li><strong>Políticas de Saúde:</strong> Assegurar que todos tenham acesso a serviços de saúde adequados e de qualidade.</li>
-                <li><strong>Participação Política:</strong> Promover a participação de grupos marginalizados em processos políticos para garantir que suas vozes sejam ouvidas e representadas.</li>
-            </ul>
+            <h2>5. Desenvolvimento Técnico</h2>
+            <p>A fase de desenvolvimento técnico envolveu a codificação do site. Utilizou-se HTML, CSS e JavaScript para criar uma plataforma responsiva, que funcionasse bem em dispositivos móveis e desktops. Testes foram realizados para garantir que todas as funcionalidades estivessem operando corretamente.</p>
+        </section>
+
+        <section>
+            <h2>6. Revisão e Edição de Conteúdo</h2>
+            <p>Após o desenvolvimento, o conteúdo foi revisado e editado para garantir precisão e clareza. Especialistas em desigualdade social foram consultados para validar as informações apresentadas. Essa etapa foi crucial para assegurar a credibilidade do site.</p>
+        </section>
+
+        <section>
+            <h2>7. Lançamento do Site</h2>
+            <p>Com tudo pronto, o site foi oficialmente lançado. Uma campanha de divulgação foi realizada nas redes sociais e em comunidades online para alcançar um público mais amplo. O objetivo era aumentar a conscientização sobre a desigualdade social e incentivar discussões sobre o tema.</p>
+        </section>
+
+        <section>
+            <h2>8. Atualizações e Manutenção</h2>
+            <p>Após o lançamento, o site passou a ser atualizado regularmente com novas informações, artigos e recursos. A equipe se comprometeu a manter o conteúdo relevante e a responder a feedbacks dos usuários, garantindo que o site continuasse a ser uma fonte confiável de informação sobre desigualdade social.</p>
         </section>
     </main>
 
