--- a/sobre.html
+++ b/sobre.html
@@ -3,58 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre a Desigualdade Social</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Desigualdade Social</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+        h2 {
+            color: #555;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Sobre a Desigualdade Social</h1>
-    </header>
 
-    <main>
-        <section>
-            <h2>Definição de Desigualdade Social</h2>
-            <p>A desigualdade social refere-se à disparidade no acesso a recursos, oportunidades e direitos entre diferentes grupos sociais. Essa desigualdade pode se manifestar em várias dimensões, como econômica, educacional, de saúde e política.</p>
-        </section>
+    <h1>Desigualdade Social</h1>
 
-        <section>
-            <h2>Causas da Desigualdade Social</h2>
-            <ul>
-                <li><strong>Fatores Históricos:</strong> A história de um país, incluindo colonialismo, escravidão e discriminação, pode criar desigualdades que persistem ao longo do tempo.</li>
-                <li><strong>Estruturas Sociais:</strong> Sistemas sociais que favorecem determinados grupos, como a discriminação racial e de gênero, contribuem para a desigualdade.</li>
-                <li><strong>Políticas Públicas Inadequadas:</strong> A falta de políticas que promovam a inclusão e a igualdade de oportunidades pode acentuar as desigualdades existentes.</li>
-                <li><strong>Globalização:</strong> O processo de globalização pode exacerbar desigualdades, beneficiando alguns países e grupos em detrimento de outros.</li>
-            </ul>
-        </section>
+    <h2>Definição</h2>
+    <p>A desigualdade social refere-se à distribuição desigual de recursos, oportunidades e direitos entre diferentes grupos sociais.</p>
 
-        <section>
-            <h2>Consequências da Desigualdade Social</h2>
-            <ul>
-                <li><strong>Pobreza:</strong> A desigualdade social é um dos principais fatores que perpetuam a pobreza, dificultando a mobilidade social.</li>
-                <li><strong>Problemas de Saúde:</strong> Grupos marginalizados frequentemente enfrentam acesso desigual a serviços de saúde, resultando em disparidades na saúde e expectativa de vida.</li>
-                <li><strong>Violência e Conflitos:</strong> A desigualdade pode levar a tensões sociais e conflitos, afetando a estabilidade e a coesão social.</li>
-                <li><strong>Desemprego:</strong> A falta de oportunidades de emprego para grupos marginalizados perpetua ciclos de exclusão e pobreza.</li>
-            </ul>
-        </section>
+    <h2>Causas da Desigualdade Social</h2>
+    <ul>
+        <li>Fatores econômicos: Diferenças de renda e riqueza.</li>
+        <li>Educação: Acesso desigual à educação de qualidade.</li>
+        <li>Discriminação: Racismo, sexismo e outras formas de discriminação.</li>
+        <li>Políticas públicas: Falta de políticas que promovam a inclusão social.</li>
+    </ul>
 
-        <section>
-            <h2>Importância da Conscientização</h2>
-            <p>Conscientizar a sociedade sobre a desigualdade social é fundamental para promover mudanças. A educação e a informação podem ajudar a combater preconceitos e a promover a inclusão. Medidas efetivas para reduzir a desigualdade são essenciais para construir uma sociedade mais justa e equitativa.</p>
-        </section>
+    <h2>Consequências da Desigualdade Social</h2>
+    <ul>
+        <li>Aumento da pobreza e da exclusão social.</li>
+        <li>Conflitos sociais e violência.</li>
+        <li>Baixa mobilidade social.</li>
+        <li>Problemas de saúde e acesso limitado a serviços básicos.</li>
+    </ul>
 
-        <section>
-            <h2>Medidas para Combater a Desigualdade Social</h2>
-            <ul>
-                <li><strong>Educação Inclusiva:</strong> Garantir acesso igualitário à educação de qualidade para todos, independentemente de sua origem social.</li>
-                <li><strong>Reforma Fiscal:</strong> Implementar sistemas fiscais que promovam a redistribuição de renda e recursos.</li>
-                <li><strong>Políticas de Saúde:</strong> Assegurar que todos tenham acesso a serviços de saúde adequados e de qualidade.</li>
-                <li><strong>Participação Política:</strong> Promover a participação de grupos marginalizados em processos políticos para garantir que suas vozes sejam ouvidas e representadas.</li>
-            </ul>
-        </section>
-    </main>
+    <h2>Possíveis Soluções</h2>
+    <ul>
+        <li>Investimento em educação e capacitação profissional.</li>
+        <li>Implementação de políticas de redistribuição de renda.</li>
+        <li>Promoção da inclusão social e combate à discriminação.</li>
+        <li>Fortalecimento da participação cidadã nas decisões políticas.</li>
+    </ul>
 
-    <footer>
-        <p>© 2024 Desigualdade Social | Todos os direitos reservados.</p>
-    </footer>
+    <h2>Conclusão</h2>
+    <p>A desigualdade social é um desafio complexo que requer a colaboração de governos, sociedade civil e setor privado para ser enfrentado de maneira eficaz.</p>
+
 </body>
 </html>
