--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desigualdade Social</title>
-    <sobre>
+    <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -21,7 +21,7 @@
             list-style-type: disc;
             margin-left: 20px;
         }
-    </sobre>
+    </style>
 </head>
 <body>
 
