--- a/informacoes.html
+++ b/informacoes.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Texto Adicionado -->
+    <div>
+        <p>Feito por:</p>
+        <p>Mateus Mognon</p>
+        <p>Sofia Sio</p>
+        <p>Gabriella Nickel</p>
+        <p>Ian Lucas</p>
+        <p>Julian</p>
+    </div>
+
     <header>
         <h1>História do Desenvolvimento do Site sobre Desigualdade Social</h1>
     </header>
@@ -43,18 +54,4 @@
         </section>
 
         <section>
-            <h2>7. Lançamento do Site</h2>
-            <p>Com tudo pronto, o site foi oficialmente lançado. Uma campanha de divulgação foi realizada nas redes sociais e em comunidades online para alcançar um público mais amplo. O objetivo era aumentar a conscientização sobre a desigualdade social e incentivar discussões sobre o tema.</p>
-        </section>
-
-        <section>
-            <h2>8. Atualizações e Manutenção</h2>
-            <p>Após o lançamento, o site passou a ser atualizado regularmente com novas informações, artigos e recursos. A equipe se comprometeu a manter o conteúdo relevante e a responder a feedbacks dos usuários, garantindo que o site continuasse a ser uma fonte confiável de informação sobre desigualdade social.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2024 Desigualdade Social | Todos os direitos reservados.</p>
-    </footer>
-</body>
-</html>
+            <h2>7. Lançamento do Site</ ⬤
