--- a/sobre.html
+++ b/sobre.html
@@ -3,59 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desigualdade Social</title>
+    <title>Infraestrutura Educacional</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        h1 {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
             color: #333;
         }
-        h2 {
-            color: #555;
+        header {
+            background: #191970;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            padding: 20px;
+            background: #fff;
+            margin: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #191970;
+        }
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            background: #191970;
+            color: #fff;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            margin-top: 20px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 0 20px;
         }
     </style>
 </head>
 <body>
 
-    <h1>Desigualdade Social</h1>
+<header>
+    <div class="container">
+        <h1>Infraestrutura Educacional</h1>
+        <center>
+        <nav>
+            <ul>
+                <a href="index.html" class="active">Home</a>
+                <a href="Informacoes.html" class="active">Informações</a>
+                <a href="Contato.html" class="active">Contato</a>
+            </ul>
+        </nav>
+            </center>
+    </div>
+</header>
+        </nav>
+    </div>
+</header>
 
-    <h2>Definição</h2>
-    <p>A desigualdade social refere-se à distribuição desigual de recursos, oportunidades e direitos entre diferentes grupos sociais.</p>
+<div class="container">
+    <section id="sobre">
+        <h2>Sobre a Infraestrutura na Educação:</h2>
+        <p>A infraestrutura escolar é o conjunto de instalações, equipamentos, tecnologia, serviços e recursos humanos que garantem o funcionamento da escola e a aprendizagem dos alunos. 
+ 
+         Uma boa infraestrutura escolar é fundamental para o desempenho dos alunos e para a qualidade de vida dos profissionais. Ela influencia diretamente na aprendizagem, pois oferece aos estudantes uma vivência prática e estimulante. 
+ 
+        <h2>Alguns pontos a considerar na infraestrutura escolar são:</h2>
 
-    <h2>Causas da Desigualdade Social</h2>
-    <ul>
-        <li>Fatores econômicos: Diferenças de renda e riqueza.</li>
-        <li>Educação: Acesso desigual à educação de qualidade.</li>
-        <li>Discriminação: Racismo, sexismo e outras formas de discriminação.</li>
-        <li>Políticas públicas: Falta de políticas que promovam a inclusão social.</li>
-    </ul>
+        <h3>Espaço físico</h3>
+        <p>O espaço físico escolar deve estar em boas condições, com salas de aula convidativas e confortáveis, quadra de esportes, biblioteca, refeitório, pátio, entre outros.</p>
+ 
+        <h3>Recursos materiais</h3>
+        <p>É importante ter recursos adequados, como laboratórios de ciências e informática, para que os alunos possam experimentar e praticar.</p>
+ 
+        <h3>Tecnologia</h3>
+           <p>A tecnologia oferecida nas escolas deve ser considerada, pois são ferramentas que interferem diretamente na qualidade dos estudos.</p> 
+ 
+        <h3>Inclusão</h3>
+           <p>É necessário possibilitar acesso fácil e inclusão aos alunos com necessidades especiais.</p> 
+         </section>
 
-    <h2>Consequências da Desigualdade Social</h2>
-    <ul>
-        <li>Aumento da pobreza e da exclusão social.</li>
-        <li>Conflitos sociais e violência.</li>
-        <li>Baixa mobilidade social.</li>
-        <li>Problemas de saúde e acesso limitado a serviços básicos.</li>
-    </ul>
 
-    <h2>Possíveis Soluções</h2>
-    <ul>
-        <li>Investimento em educação e capacitação profissional.</li>
-        <li>Implementação de políticas de redistribuição de renda.</li>
-        <li>Promoção da inclusão social e combate à discriminação.</li>
-        <li>Fortalecimento da participação cidadã nas decisões políticas.</li>
-    </ul>
+    <section id="importancia">
+        <h2>Importância da Infraestrutura Educacional</h2>
+        <p>A infraestrutura educacional abrange todos os aspectos físicos e tecnológicos que compõem o ambiente de aprendizagem. Isso inclui salas de aula, bibliotecas, laboratórios, áreas de recreação e tecnologia. A qualidade desses espaços influencia diretamente a experiência do aluno e pode afetar seu desempenho acadêmico.</p>
+        <p>Estudos mostram que ambientes de aprendizagem bem projetados e equipados promovem a motivação dos alunos, facilitam a colaboração e melhoram os resultados educacionais. Além disso, uma infraestrutura adequada garante a segurança e o bem-estar dos estudantes, criando um ambiente propício ao aprendizado.</p>
+    </section>
 
-    <h2>Conclusão</h2>
-    <p>A desigualdade social é um desafio complexo que requer a colaboração de governos, sociedade civil e setor privado para ser enfrentado de maneira eficaz.</p>
+    <section id="tipos">
+        <h2>Tipos de Infraestrutura</h2>
+        <h3>Salas de Aula</h3>
+        <p>As salas de aula são o coração da educação. Um ambiente bem projetado deve ser flexível, permitindo diferentes arranjos de mobiliário para facilitar a interação e a colaboração entre os alunos. A tecnologia, como projetores e lousas interativas, também deve ser integrada para enriquecer o processo de ensino.</p>
 
-</body>
-</html>
+        <h3>Bibliotecas</h3>
+        <p>As bibliotecas desempenham um papel crucial no desenvolvimento da leitura e da pesquisa. Elas devem ser espaços acolhedores e acessíveis, com uma coleção diversificada de livros e recursos digitais. Além disso, áreas de estudo em grupo e salas de multimídia podem enriquecer a experiência dos alunos.</p>
+
+        <h3>Laboratórios</h3>
+        <p>Laboratórios de ciências, informática e outras disciplinas são essenciais para a aprendizagem prática. Esses espaços devem ser bem equipados e seguros, permitindo que os alunos experimentem e
