--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <center>
     <title>Infraestrutura Educacional</title>
+        </center>
     <style>
         body {
             font-family: 'Arial', sans-serif;
