--- a/sobre.html
+++ b/sobre.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <center>
-    <title>Infraestrutura Educacional</title>
-        </center>
+ <header>
+        <div class="logo">
+            <h1>Infraestrutura Educacional nas Escolas</h1>
+            <p>Promovendo um Ambiente Seguro e Eficiente para o Aprendizado</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="sobre.html" class="active">Sobre</a></li>
+                <li><a href="informações.html" class="active">Informações</a></li>
+                <li><a href="index.html" class="active">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     <style>
         body {
             font-family: 'Arial', sans-serif;
