--- a/sobre.html
+++ b/sobre.html
@@ -10,10 +10,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="sobre.html" class="active">Sobre</a></li>
-                <li><a href="informações.html" class="active">Informações</a></li>
-                <li><a href="index.html" class="active">Contato</a></li>
+                <a href="index.html" class="active">Home</a>
+                <a href="sobre.html" class="active">Sobre</a>
+                <a href="informações.html" class="active">Informações</a>
+                <a href="index.html" class="active">Contato</a>
             </ul>
         </nav>
     </header>
