--- a/informações.html
+++ b/informações.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Compra de Escolas por Empresas no Paraná</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="logo">
+            <h1>Educação e Negócios no Paraná</h1>
+            <p>Análise da compra de escolas por empresas</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- Conteúdo Principal -->
+    <main>
+        <section class="hero">
+            <h2>O Crescimento das Compras de Escolas por Empresas</h2>
+            <p>Nos últimos anos, o Paraná tem visto um aumento significativo na compra de instituições de ensino por empresas privadas. Essa tendência levanta questões sobre a qualidade da educação e a gestão das escolas.</p>
+        </section>
+
+        <section class="informacoes">
+            <h3>Motivos para a Aquisição</h3>
+            <p>As empresas estão investindo em escolas por várias razões, incluindo:</p>
+            <ul>
+                <li>Expansão de mercado no setor educacional.</li>
+                <li>Busca por novas fontes de receita.</li>
+                <li>Interesse em melhorar a qualidade da educação oferecida.</li>
+            </ul>
+        </section>
+
+        <section class="impactos">
+            <h3>Impactos na Educação</h3>
+            <p>A compra de escolas por empresas pode ter impactos positivos e negativos:</p>
+            <ul>
+                <li><strong>Positivos:</strong> Investimentos em infraestrutura e tecnologia.</li>
+                <li><strong>Negativos:</strong> Foco excessivo no lucro em detrimento da qualidade educacional.</li>
+            </ul>
+        </section>
+
+        <section class="conclusao">
+            <h3>Conclusão</h3>
+            <p>É fundamental que a sociedade acompanhe essa tendência e participe do debate sobre a qualidade da educação no Paraná. O futuro das escolas deve ser pautado pelo bem-estar dos alunos e pela excelência no ensino.</p>
+        </section>
+    </main>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>© 2024 Educação e Negócios no Paraná | Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
