--- a/informações.html
+++ b/informações.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra de Escolas por Empresas no Paraná</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="informações.css">
 </head>
 <body>
     <!-- Cabeçalho -->
