--- a/informações.html
+++ b/informações.html
@@ -10,8 +10,10 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
+            <center></center>
             <h1>Educação e Negócios no Paraná</h1>
             <p>Análise da compra de escolas por empresas</p>
+            </center>
         </div>
         <nav>
             <ul>
