--- a/informações.html
+++ b/informações.html
@@ -10,7 +10,7 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <center></center>
+            <center>
             <h1>Educação e Negócios no Paraná</h1>
             <p>Análise da compra de escolas por empresas</p>
             </center>
