--- a/sobre.html
+++ b/sobre.html
@@ -12,7 +12,7 @@
             <ul>
                 <a href="index.html" class="active">Home</a>
                 <a href="informações.html" class="active">Informações</a>
-                <a href="index.html" class="active">Contato</a>
+                <a href="contato.html" class="active">Contato</a>
             </ul>
         </nav>
     </header>
