--- a/informações.html
+++ b/informações.html
@@ -57,8 +57,10 @@
     </main>
 
     <!-- Rodapé -->
+    <center>
     <footer>
         <p>© 2024 Educação e Negócios no Paraná | Todos os direitos reservados.</p>
     </footer>
+        </center>
 </body>
 </html>
