--- a/informações.html
+++ b/informações.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra de Escolas por Empresas no Paraná</title>
-    <link rel="stylesheet" href="informações.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <center>
             <h1>Educação e Negócios no Paraná</h1>
             <p>Análise da compra de escolas por empresas</p>
-            </center>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="sobre.html" class="active">Sobre</a></li>
-                <li><a href="contato.html" class="active">Contato</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -57,10 +56,8 @@
     </main>
 
     <!-- Rodapé -->
-    <center>
     <footer>
         <p>© 2024 Educação e Negócios no Paraná | Todos os direitos reservados.</p>
     </footer>
-        </center>
 </body>
 </html>
