--- a/informações.html
+++ b/informações.html
@@ -56,7 +56,10 @@
 
     <!-- Rodapé -->
     <footer>
+        <center>
         <p>© 2024 Educação e Negócios no Paraná | Todos os direitos reservados.</p>
+            </center>
     </footer>
+    
 </body>
 </html>
