--- a/informações.html
+++ b/informações.html
@@ -9,6 +9,7 @@
 <body>
     <!-- Cabeçalho -->
     <header>
+        <center>
         <div class="logo">
             <h1>Educação e Negócios no Paraná</h1>
             <p>Análise da compra de escolas por empresas</p>
@@ -20,6 +21,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
+            </center>
     </header>
 
     <!-- Conteúdo Principal -->
