--- a/informações.html
+++ b/informações.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="sobre.html" class="active">Sobre</a></li>
+                <li><a href="contato.html" class="active">Contato</a></li>
             </ul>
         </nav>
             </center>
