--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="sobre.html" class="active">Sobre</a></li>
                 <li><a href="informações.html" class="active">Informações</a></li>
-                <li><a href="index.html" class="active">Contato</a></li>
+                <li><a href="contato.html" class="active">Contato</a></li>
             </ul>
         </nav>
     </header>
