--- a/contato.html
+++ b/contato.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="noticias.html">Notícias</a></li>
                 <li><a href="contato.html" class="active">Contato</a></li>
             </ul>
         </nav>
