--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,9 @@
     <header>
         <div class="logo">
             <h1>Educação e Negócios no Paraná</h1>
+            <center>
             <p>Análise da compra de escolas por empresas</p>
+            </center>
         </div>
         <nav>
             <ul>
@@ -44,7 +46,9 @@
 
     <!-- Rodapé -->
     <footer>
+        <center>
         <p>© 2024 Educação e Negócios no Paraná | Todos os direitos reservados.</p>
+        </center>
     </footer>
 </body>
 </html>
