--- a/contato.html
+++ b/contato.html
@@ -17,9 +17,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="sobre.html" class="active">Sobre</a></li>
                 <li><a href="contato.html" class="active">Contato</a></li>
             </ul>
         </nav>
