--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             </div>
         </section>
     </main>
-
+    <center>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/ID_DO_VIDEO" frameborder="0" allowfullscreen></iframe>
+</center>
     <!-- Rodapé -->
     <footer>
         <p>© 2024 Infraestrutura Educacional nas Escolas | Todos os direitos reservados.</p>
