--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="sobre.html" class="active">Sobre</a></li>
-                <li><a href="contato.html" class="active">Contato</a></li>
+                <li><a href="informações.html" class="active">Informações</a></li>
             </ul>
         </nav>
     </header>
