--- a/index.html
+++ b/index.html
@@ -98,22 +98,24 @@
 <body>
     <div class="container">
         <div class="image-box">
-            <img src="imagem1.jpg" alt="Descrição da Imagem 1">
+            <img src="teto.jpg" alt="Descrição da Imagem 1" width:500px">
+    <figcaption>Teto de sala de aula obstruído.</figcaption>
         </div>
         <div class="image-box">
-            <img src="imagem2.jpg" alt="Descrição da Imagem 2">
+            <img src="calçada.jpg" alt="Descrição da Imagem 2" width:500px">
+    <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="imagem3.jpg" alt="Descrição da Imagem 3">
+            <img src="escada.jpg" alt="Descrição da Imagem 3" width:500px">
+    <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="imagem4.jpg" alt="Descrição da Imagem 4">
+            <img src="parede_descascada.jpg" alt="Descrição da Imagem 4" width:500px">
+    <figcaption>Parede descascando.</figcaption>
         </div>
         <div class="image-box">
-            <img src="imagem5.jpg" alt="Descrição da Imagem 5">
-        </div>
-        <div class="image-box">
-            <img src="imagem6.jpg" alt="Descrição da Imagem 6">
+            <img src="frente-sala.jpg" alt="Descrição da Imagem 5" width:500px">
+    <figcaption>Vista da porta de uma sala de aula.</figcaption>
         </div>
     </div>
 </body>
