--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="image-box">
             <img src="teto.jpg" alt="Descrição da Imagem 1" width:500px">
-    <figcaption>Teto de sala de aula obstruído.</figcaption>
+    <figcaption>Teto de sala de aula danificado.</figcaption>
         </div>
         <div class="image-box">
             <img src="calçada.jpg" alt="Descrição da Imagem 2" width:500px">
