--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
 <body>
     <div class="container">
         <div class="image-box">
-            <img src="teto.jpg" alt="Descrição da Imagem 1" width:500px">
+            <img src="teto.jpeg" alt="Descrição da Imagem 1" width:500px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
         </div>
         <div class="image-box">
-            <img src="calçada.jpg" alt="Descrição da Imagem 2" width:500px">
+            <img src="calçada.jpeg" alt="Descrição da Imagem 2" width:500px">
     <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="escada.jpg" alt="Descrição da Imagem 3" width:500px">
+            <img src="escada.jpeg" alt="Descrição da Imagem 3" width:500px">
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="parede_descascada.jpg" alt="Descrição da Imagem 4" width:500px">
+            <img src="parede_descascada.jpeg" alt="Descrição da Imagem 4" width:500px">
     <figcaption>Parede descascando.</figcaption>
         </div>
         <div class="image-box">
-            <img src="frente-sala.jpg" alt="Descrição da Imagem 5" width:500px">
+            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5" width:500px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
         </div>
     </div>
