--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
     <div class="container">
         <div class="image-box">
-            <img src="teto.jpeg" alt="Descrição da Imagem 1" width:500px">
+            <img src="teto.jpeg" alt="Descrição da Imagem 1" width:250px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
         </div>
         <div class="image-box">
@@ -110,11 +110,11 @@
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="parede_descascada.jpeg" alt="Descrição da Imagem 4" width:500px">
+            <img src="parece_descascada.jpeg" alt="Descrição da Imagem 4" width:250px">
     <figcaption>Parede descascando.</figcaption>
         </div>
         <div class="image-box">
-            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5" width:500px">
+            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5" width:250px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
         </div>
     </div>
