--- a/index.html
+++ b/index.html
@@ -98,23 +98,28 @@
 <body>
     <div class="container">
         <div class="image-box">
-            <img src="teto.jpeg" alt="Descrição da Imagem 1" width:250px">
+            <width:250px>
+            <img src="teto.jpeg" alt="Descrição da Imagem 1">
     <figcaption>Teto de sala de aula danificado.</figcaption>
         </div>
         <div class="image-box">
-            <img src="calçada.jpeg" alt="Descrição da Imagem 2" width:500px">
+            <width:500px>
+            <img src="calçada.jpeg" alt="Descrição da Imagem 2">
     <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="escada.jpeg" alt="Descrição da Imagem 3" width:500px">
+            <width:500px>
+            <img src="escada.jpeg" alt="Descrição da Imagem 3">
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
         </div>
         <div class="image-box">
-            <img src="parece_descascada.jpeg" alt="Descrição da Imagem 4" width:250px">
+            <width:250px>
+            <img src="parece_descascada.jpeg" alt="Descrição da Imagem 4">
     <figcaption>Parede descascando.</figcaption>
         </div>
         <div class="image-box">
-            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5" width:250px">
+            <width:250px>
+            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
         </div>
     </div>
