--- a/index.html
+++ b/index.html
@@ -95,35 +95,47 @@
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <div class="image-box">
-            <width:250px>
-            <img src="teto.jpeg" alt="Descrição da Imagem 1">
+<!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="escola.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
+    <figcaption>Fachada da escola de Laranjeiras do Sul.</figcaption>
+</figure>
+</head>
+</html>
+    <!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
-        </div>
-        <div class="image-box">
-            <width:500px>
-            <img src="calçada.jpeg" alt="Descrição da Imagem 2">
+</figure>
+</head>
+</html>
+<!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="calçada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
-        </div>
-        <div class="image-box">
-            <width:500px>
-            <img src="escada.jpeg" alt="Descrição da Imagem 3">
+</figure>
+</head>
+</html>
+<!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="escada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
-        </div>
-        <div class="image-box">
-            <width:250px>
-            <img src="parece_descascada.jpeg" alt="Descrição da Imagem 4">
+</figure>
+</head>
+</html>
+<!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="parece_descascada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Parede descascando.</figcaption>
-        </div>
-        <div class="image-box">
-            <width:250px>
-            <img src="frente-sala.jpeg" alt="Descrição da Imagem 5">
+</figure>
+</head>
+</html>
+<!DOCTYPE html>
+        <figure style="text-align: center;">
+    <img src="frente-sala.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
-        </div>
-    </div>
-</body>
+</figure>
+</head>
 </html>
     <center>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/ID_DO_VIDEO" frameborder="0" allowfullscreen></iframe>
