--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </style>
 </head>
     <!DOCTYPE html>
-        <figure style="text-align: center;">
+        <figure style="text-align: left;">
     <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
 </figure>
@@ -124,7 +124,7 @@
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: center;">
+        <figure style="text-align: right;">
     <img src="frente-sala.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
 </figure>
