--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: space-between;
             padding: 10px;
         }
 
