--- a/index.html
+++ b/index.html
@@ -96,35 +96,35 @@
     </style>
 </head>
     <!DOCTYPE html>
-        <figure style="text-align: left;">
+        <figure style="text-align: ;">
     <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
 </figure>
 </head>
 </html>
     <!DOCTYPE html>
-        <figure style="text-align: center;">
+        <figure style="text-align: ;">
     <img src="escada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: center;">
+        <figure style="text-align: ;">
     <img src="calçada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: center;">
+        <figure style="text-align: ;">
     <img src="parece_descascada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
     <figcaption>Parede descascando.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: right;">
+        <figure style="text-align: ;">
     <img src="frente-sala.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
 </figure>
